--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,13 +22,12 @@ debug-assertions = false
 
 [workspace.dependencies]
 indoc = "2.0.5"
+matetui = "0.3.2"
 eyre = { version = "0.6.12", default-features = false, features = [
     "auto-install",
 ] }
 lool = { git = "https://github.com/lucodear/lool", version = "0.9.0", features = [
-    "cli.stylize",
-    "cli.tui",
-    "cli.tui.widgets"
+    "cli.stylize"
 ] }
 strum = { version = "0.26.1", features = ["derive"] }
 serde = { version = "1.0.210", features = ["derive"] }
