--- a/coco/Cargo.toml
+++ b/coco/Cargo.toml
@@ -13,6 +13,7 @@ tokio = { workspace = true }
 indoc = { workspace = true }
 strum = { workspace = true, features = ["derive"] }
 serde = { workspace = true, features = ["derive"] }
+matetui = { workspace = true }
 tui = { path = "../tui" }
 cc-core = { path = "../core" }
 pico-args = "0.5.0"
