--- a/coco/Cargo.toml
+++ b/coco/Cargo.toml
@@ -14,6 +14,7 @@ indoc = { workspace = true }
 strum = { workspace = true, features = ["derive"] }
 serde = { workspace = true, features = ["derive"] }
 matetui = { workspace = true }
+rust-i18n = { workspace = true }
 tui = { path = "../tui" }
 cc-core = { path = "../core" }
 pico-args = "0.5.0"
@@ -21,3 +22,11 @@ pico-args = "0.5.0"
 [[bin]]
 name = "coco"
 path = "src/main.rs"
+
+[package.metadata.i18n]
+available-locales = ["en", "es"]
+default-locale = "en"
+load-path = "../locales"
+minify-key = true
+minify-key-len = 4
+minify-key-thresh = 4
