i18n: 🌐 summary view i18n translation

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -61,3 +61,7 @@ tasks:
     cmds:
       - cargo release major --execute --no-confirm --package coco
 
+  i18n:
+    desc: 🌍 search untranslated strings
+    cmds:
+      - cargo i18n
