--- a/coco.yml
+++ b/coco.yml
@@ -53,9 +53,9 @@ askFooter: true
 askBreakingChange: true
 
 # scopes:
-#   - "source"
-#   - "meta"
-#   - "keyword"
+#   - "foo"
+#   - "bar"
+#   - "baz"
 
 # types:
 #   - name: "feat"
