--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,5 @@
-[workspace]
-resolver = "2"
-members = [ "coco", "core", "tui" ]
-
-[workspace.package]
+[package]
+name = "rs-coco"
 version = "0.0.0-alpha.0"
 description = "🥥 » coco » an interactive cli for creating conventional commits."
 authors = ["Lucas Colombo <lucas@lucode.ar>"]
@@ -20,7 +17,15 @@ overflow-checks = false
 debug = 0
 debug-assertions = false
 
-[workspace.dependencies]
+[[bin]]
+name = "coco"
+path = "src/bin/main.rs"
+
+[lib]
+name = "coco"
+path = "src/lib/lib.rs"
+
+[dependencies]
 indoc = "2.0.5"
 matetui = "0.3.4"
 rust-i18n = "3.1.2"
@@ -28,7 +33,8 @@ eyre = { version = "0.6.12", default-features = false, features = [
     "auto-install",
 ] }
 lool = { git = "https://github.com/lucodear/lool", version = "0.9.0", features = [
-    "cli.stylize"
+    "cli.stylize",
+    "macros"
 ] }
 strum = { version = "0.26.1", features = ["derive"] }
 serde = { version = "1.0.210", features = ["derive"] }
@@ -39,6 +45,15 @@ tokio = { version = "1.40.0", features = [
     "sync",
     "time",
 ] }
+unicode-width = "0.2.0"
+tokio-util = "0.7.12"
+pico-args = "0.5.0"
+sys-locale = "0.3.1"
+serde_yaml = "0.9.34"
+dirs = "5.0.1"
+
+[dev-dependencies]
+tempfile = "3.12"
 
 [i18n]
 available-locales = ["en", "es"]
