docs: 📝 add crate badge to README.md

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,26 +1,25 @@
 {
     "files.exclude": {
-        // ⚙️ config
-        "Taskfile.yaml": true,
-        ".cocorc": true,
-        ".task": true,
-        ".cargo": true,        
-        ".github": true,
+        // // ⚙️ config
+        // "Taskfile.yaml": true,
+        // ".task": true,
+        // ".cargo": true,        
+        // ".github": true,
 
-        // 📦 package
-        "Cargo.lock": true,
-        "target": true,
+        // // 📦 package
+        // "Cargo.lock": true,
+        // "target": true,
 
-        // 📝 readmes
-        "**/**/README.md": true,
-        "LICENSE": true,
+        // // 📝 readmes
+        // "**/**/README.md": true,
+        // "LICENSE": true,
 
-        // 🗑️ trash
-        "check_size.py": true,
-        "*.code-workspace": true,
-        ".gitignore": true,
-        ".vscode": true,
-        ".git": true,
+        // // 🗑️ trash
+        // "check_size.py": true,
+        // "*.code-workspace": true,
+        // ".gitignore": true,
+        // ".vscode": true,
+        // ".git": true,
     },
     "[rust]": {
         "editor.formatOnSave": true
