chore: 🧹 prepare the package to be published on crates.io (#26)
* docs: 📝 add crate badge to README.md
* chore: 🧹 add package info to Cargo.toml

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,11 +11,11 @@
         "Cargo.lock": true,
         "target": true,
 
-        // 📝 readmes
-        "**/**/README.md": true,
-        "LICENSE": true,
+        // // 📝 readmes
+        // "**/**/README.md": true,
+        // "LICENSE": true,
 
-        // 🗑️ trash
+       // 🗑️ trash
         "check_size.py": true,
         "*.code-workspace": true,
         ".gitignore": true,
