--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ license-file = "LICENSE"
 documentation = "https://docs.rs/rs-coco"
 repository = "https://github.com/lucas-labs/coco"
 homepage = "https://github.com/lucas-labs/coco"
-keywords = ["cli", "conventional-commits", "git", "commit", "conventional", "commit"]
+keywords = ["cli", "conventional-commits", "git", "commit", "conventional"]
 categories = ["command-line-interface", "command-line-utilities", "development-tools", "config"]
 
 [profile.release]
