--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -66,7 +66,7 @@ tasks:
     cmds:
       - cargo release major --config .github/cfg/release.toml --execute --no-confirm --package rs-coco
 
-  changelog:unreleased:
+  changelog:default:
     desc: 📝 generate changelog
     cmds:
       - git cliff -c .github/cfg/cliff.toml -o "CHANGELOG.md"
